added run numbers

--- a/functional/timbre-vae/default-cedar.ini
+++ b/functional/timbre-vae/default-cedar.ini
@@ -12,6 +12,7 @@ n_iter = 64
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
+run_number = 0
 
 [VAE]
 latent_dim = 64
