--- a/functional/cgan/default_cgt.ini
+++ b/functional/cgan/default_cgt.ini
@@ -9,7 +9,7 @@ n_iter = 64
 
 [dataset]
 
-datapath = C:\Users\dbisig\Projects\MLMusic\Software\timbre-space\functional\cgan
+datapath = C:\Users\dbisig\Projects\MLMusic\Datasets\Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 
