--- a/functional/cgan/default_mnist.ini
+++ b/functional/cgan/default_mnist.ini
@@ -38,7 +38,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 
-description = cgan_cqt
+description = cgan_mnist
 start = 
 end = 
 time_elapsed = 
