--- a/functional/cgan/default-tatar-cedar.ini
+++ b/functional/cgan/default-tatar-cedar.ini
@@ -9,13 +9,13 @@ n_iter = 64
 
 [dataset]
 
-datapath = D://my_workspace/dataset/Electroacoustic-Roads
+datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
 
 [VAE]
-latent_dim = 64
+latent_dim = 8
 n_units = 2000
 kl_beta = 2.0
 batch_norm = True
@@ -24,29 +24,29 @@ output_activation = relu
 [CGAN]
 latent_dim = 64
 kernelsize = 5
-num_filters = 256
+generator_filters = 256
+discriminator_filters = 64
 generator_activation = tanh
 
 [training]
-epochs = 4
+epochs = 1000
 learning_rate = 1e-4
 batch_size = 64
 buffer_size = 60000
+buffer_size_dataset = True
 continue_training = False
-max_ckpts_to_keep = 2
+max_ckpts_to_keep = 10
 checkpoint_epochs = 15
-save_best_only = True
-learning_schedule = False
 
 
 [notes]
-additional_notes = testing the functional vae first time
+additional_notes = test- tanh as the output activation function. No batch normalization.
 
 mynotes = testing-example-audio-writting
 
 [extra]
 
-description = func-timbre-vae
+description = cgan-tatar-cedar
 start = 
 end = 
 time_elapsed = 
