preparing for the clous

--- a/functional/cgan/default-tatar-cedar.ini
+++ b/functional/cgan/default-tatar-cedar.ini
@@ -46,7 +46,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 
-description = cgan-tatar-cedar
+description = func-cgan-tatar-cedar
 start = 
 end = 
 time_elapsed = 
