--- a/functional/cgan/default-tatar.ini
+++ b/functional/cgan/default-tatar.ini
@@ -46,7 +46,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 
-description = cgan-tatar
+description = func-cgan-tatar
 start = 
 end = 
 time_elapsed = 
