--- a/functional/cgan/default.ini
+++ b/functional/cgan/default.ini
@@ -27,6 +27,8 @@ latent_dim = 64
 epochs = 100
 learning_rate = 1e-5
 batch_size = 64
+buffer_size = 60000
+buffer_size_dataset = True
 continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
