--- a/functional/timbre-vae/default-cedar4.ini
+++ b/functional/timbre-vae/default-cedar4.ini
@@ -23,11 +23,16 @@ output_activation = relu
 
 [CGAN]
 latent_dim = 64 
+kernelsize = 5
+num_filters = 256
+generator_activation = tanh
 
 [training]
-epochs = 1000
+epochs = 200
 learning_rate = 1e-4
 batch_size = 64
+buffer_size = 60000
+buffer_size_dataset = True
 continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
