--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -32,6 +32,7 @@ epochs = 4
 learning_rate = 1e-4
 batch_size = 64
 buffer_size = 60000
+buffer_size_dataset = True
 continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
