increasing the VAE latent dim...

--- a/functional/timbre-vae/default-cedar.ini
+++ b/functional/timbre-vae/default-cedar.ini
@@ -12,10 +12,10 @@ n_iter = 64
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
-run_number = 0
+run_number = 1
 
 [VAE]
-latent_dim = 64
+latent_dim = 128
 n_units = 2000
 kl_beta = 2.0
 batch_norm = True
@@ -37,11 +37,11 @@ continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
-learning_schedule = False
+learning_schedule = True
 
 
 [notes]
-additional_notes = testing the functional vae first time 
+additional_notes = testing latent dimension
 
 mynotes = testing-example-audio-writting
 
