--- a/functional/timbre-vae/default-cedar2.ini
+++ b/functional/timbre-vae/default-cedar2.ini
@@ -12,10 +12,10 @@ n_iter = 64
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
-run_number = 0
+run_number = 2
 
 [VAE]
-latent_dim = 256
+latent_dim = 512
 n_units = 2000
 kl_beta = 2.0
 batch_norm = True
@@ -47,7 +47,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 
-description = func-timbre-vae-func-timbre-vae-cedar
+description = func-timbre-vae-cedar
 start = 
 end = 
 time_elapsed = 
