--- a/functional/timbre-vae/default-cedar3.ini
+++ b/functional/timbre-vae/default-cedar3.ini
@@ -41,13 +41,13 @@ learning_schedule = False
 
 
 [notes]
-additional_notes = testing the functional vae first time. testing sigmoid output function
+additional_notes = testing output function
 
 mynotes = testing-example-audio-writting
 
 [extra]
 
-description = func-timbre-vae-func-timbre-vae-cedar
+description = func-timbre-vae-cedar
 start = 
 end = 
 time_elapsed = 
