--- a/functional/timbre-vae/default-cedar4.ini
+++ b/functional/timbre-vae/default-cedar4.ini
@@ -15,7 +15,7 @@ workspace =
 run_number = 0
 
 [VAE]
-latent_dim = 64
+latent_dim = 128
 n_units = 2000
 kl_beta = 2.0
 batch_norm = True
@@ -41,13 +41,13 @@ learning_schedule = True
 
 
 [notes]
-additional_notes = testing the functional vae first time - testing learning schedule option
+additional_notes = testing latent dimension
 
 mynotes = testing-example-audio-writting
 
 [extra]
 
-description = func-timbre-vae-func-timbre-vae-cedar
+description = func-timbre-vae-cedar
 start = 
 end = 
 time_elapsed = 
