working on latent dims

--- a/functional/timbre-vae/default-cedar3.ini
+++ b/functional/timbre-vae/default-cedar3.ini
@@ -15,11 +15,11 @@ workspace =
 run_number = 0
 
 [VAE]
-latent_dim = 64
+latent_dim = 256
 n_units = 2000
 kl_beta = 2.0
 batch_norm = True
-output_activation = sigmoid
+output_activation = relu
 
 [CGAN]
 latent_dim = 64 
