--- a/functional/timbre-cvae2/default.ini
+++ b/functional/timbre-cvae2/default.ini
@@ -16,16 +16,10 @@ run_number = 0
 
 [VAE]
 latent_dim = 256
-n_units = 2000
+n_units = 2048
 kl_beta = 2.0
-batch_norm = True
+batch_norm = False
 output_activation = relu
-
-[CGAN]
-latent_dim = 64 
-kernelsize = 5
-num_filters = 256
-generator_activation = tanh
 
 [training]
 epochs = 200
@@ -47,7 +41,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 
-description = func-timbre-vae-cedar
+description = func-timbre-vae2-cedar
 start = 
 end = 
 time_elapsed = 
