--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -9,26 +9,26 @@ n_iter = 64
 
 [dataset]
 
-datapath = D://my_workspace/dataset/ambient-lawrence-cruel
+datapath = C:\Users\ml\Projects\MLMusic\Datasets\Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
 
 [VAE]
-latent_dim = 64
+latent_dim = 256
 n_units = 2000
 kl_beta = 2.0
 batch_norm = True
 output_activation = relu
 
 [CGAN]
-latent_dim = 64
+latent_dim = 64 
 kernelsize = 5
 num_filters = 256
 generator_activation = tanh
 
 [training]
-epochs = 4
+epochs = 200
 learning_rate = 1e-4
 batch_size = 64
 buffer_size = 60000
@@ -41,13 +41,13 @@ learning_schedule = False
 
 
 [notes]
-additional_notes = testing the functional vae first time
+additional_notes = testing output function
 
 mynotes = testing-example-audio-writting
 
 [extra]
 
-description = func-timbre-vae
+description = func-timbre-vae-icst-desktop
 start = 
 end = 
 time_elapsed = 
