--- a/functional/timbre-vae/default-cedar2.ini
+++ b/functional/timbre-vae/default-cedar2.ini
@@ -1,17 +1,14 @@
 [audio]
-sample_rate = 44100 
+sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-
-#Fast Griffin-Lim - number of iterations
 n_iter = 64
 
 [dataset]
-
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
-workspace = 
+workspace = /home/ktatar/scratch/datasets/Electroacoustic-Roads/func-timbre-vae-cedar/run-002
 run_number = 2
 
 [VAE]
@@ -21,14 +18,8 @@ kl_beta = 2.0
 batch_norm = True
 output_activation = relu
 
-[CGAN]
-latent_dim = 64 
-kernelsize = 5
-num_filters = 256
-generator_activation = tanh
-
 [training]
-epochs = 200
+epochs = 2000
 learning_rate = 1e-4
 batch_size = 64
 buffer_size = 60000
@@ -37,17 +28,15 @@ continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
-learning_schedule = False
-
+learning_schedule = True
 
 [notes]
-additional_notes = testing the functional vae first time. testing bigger latent space. 
-
-mynotes = testing-example-audio-writting
+additional_notes = vae is sort-of working. Testing learning schedule
+mynotes = 
 
 [extra]
-
 description = func-timbre-vae-cedar
-start = 
-end = 
-time_elapsed = 
+start = Wed Jan 15 10:45:06 2020
+end = Wed Jan 15 13:10:00 2020
+time_elapsed = 8694.31551194191
+
