--- a/functional/timbre-vae/default-cedar4.ini
+++ b/functional/timbre-vae/default-cedar4.ini
@@ -1,18 +1,15 @@
 [audio]
-sample_rate = 44100 
+sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-
-#Fast Griffin-Lim - number of iterations
 n_iter = 64
 
 [dataset]
-
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
-workspace = 
-run_number = 0
+workspace = /home/ktatar/scratch/datasets/Electroacoustic-Roads/func-timbre-vae-cedar/run-002
+run_number = 2
 
 [VAE]
 latent_dim = 256
@@ -20,12 +17,6 @@ n_units = 2000
 kl_beta = 2.0
 batch_norm = True
 output_activation = relu
-
-[CGAN]
-latent_dim = 64 
-kernelsize = 5
-num_filters = 256
-generator_activation = tanh
 
 [training]
 epochs = 200
@@ -37,17 +28,15 @@ continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
-learning_schedule = True
-
+learning_schedule = False
 
 [notes]
-additional_notes = testing latent dimension
-
-mynotes = testing-example-audio-writting
+additional_notes = vae is sort-of working. Testing various config options now. 
+mynotes = 
 
 [extra]
-
 description = func-timbre-vae-cedar
 start = 
 end = 
 time_elapsed = 
+
