testing various vae models with stacked layers

--- a/functional/cgan/default-tatar.ini
+++ b/functional/cgan/default-tatar.ini
@@ -46,6 +46,9 @@ mynotes = testing-example-audio-writting
 
 [extra]
 
+example_duration = 30
+example_smoothing = 2
+num_examples = 16
 description = func-cgan-tatar
 start = 
 end = 
