--- a/functional/timbre-vae/default-cedar4.ini
+++ b/functional/timbre-vae/default-cedar4.ini
@@ -31,7 +31,7 @@ save_best_only = True
 learning_schedule = False
 
 [notes]
-additional_notes = vae is sort-of working. Testing various config options now. 
+additional_notes = vae is sort-of working. Testing different latent dims. 
 mynotes = 
 
 [extra]
