--- a/functional/timbre-vae2/default-cedar2.ini
+++ b/functional/timbre-vae2/default-cedar2.ini
@@ -17,9 +17,12 @@ run_number = 0
 [VAE]
 latent_dim = 256
 n_units = 2048
+n_units_divider = 1
+num_layers = 2
 kl_beta = 2.0
 batch_norm = False
 output_activation = relu
+
 
 [training]
 epochs = 200
@@ -31,11 +34,11 @@ continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
-learning_schedule = True
+learning_schedule = False
 
 
 [notes]
-additional_notes = testing latent dimension
+additional_notes = testing different stacked layers
 
 mynotes = testing-example-audio-writting
 
