--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -9,7 +9,7 @@ n_iter = 64
 
 [dataset]
 
-datapath = C:\Users\ml\Projects\MLMusic\Datasets\Electroacoustic-Roads
+datapath = D:\my_workspace\dataset\Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
