--- a/functional/timbre-vae2/default.ini
+++ b/functional/timbre-vae2/default.ini
@@ -9,7 +9,7 @@ n_iter = 64
 
 [dataset]
 
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
+datapath = D:\my_workspace\dataset\Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
@@ -17,6 +17,8 @@ run_number = 0
 [VAE]
 latent_dim = 256
 n_units = 2048
+n_units_divider = 2
+num_layers = 2
 kl_beta = 2.0
 batch_norm = False
 output_activation = relu
@@ -31,7 +33,7 @@ continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
-learning_schedule = True
+learning_schedule = False
 
 
 [notes]
@@ -41,7 +43,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 
-description = func-timbre-vae2-cedar
+description = func-timbre-vae2
 start = 
 end = 
 time_elapsed = 
