--- a/functional/timbre-vae/default-cedar3.ini
+++ b/functional/timbre-vae/default-cedar3.ini
@@ -14,13 +14,13 @@ run_number = 2
 [VAE]
 latent_dim = 512
 n_units = 2000
-kl_beta = 2.0
+kl_beta = 0.0005
 batch_norm = True
 output_activation = sigmoid
 
 [training]
 epochs = 200
-learning_rate = 1e-4
+learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
 buffer_size_dataset = True
