--- a/functional/timbre-vae2/default.ini
+++ b/functional/timbre-vae2/default.ini
@@ -19,13 +19,13 @@ latent_dim = 256
 n_units = 2048
 n_units_divider = 2
 num_layers = 2
-kl_beta = 2.0
+kl_beta = 0.0005
 batch_norm = False
 output_activation = relu
 
 [training]
 epochs = 200
-learning_rate = 1e-4
+learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
 buffer_size_dataset = True
