working 1 layer vae... testing different latent dims.

--- a/functional/timbre-vae/default-cedar.ini
+++ b/functional/timbre-vae/default-cedar.ini
@@ -8,11 +8,12 @@ n_iter = 64
 [dataset]
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
-workspace = /home/ktatar/scratch/datasets/Electroacoustic-Roads/func-timbre-vae-cedar/run-002
-run_number = 2
+workspace = 
+run_number = 10
+total_frames = 895918
 
 [VAE]
-latent_dim = 256
+latent_dim = 8
 n_units = 2048
 kl_beta = 0.0005
 batch_norm = True
@@ -31,12 +32,11 @@ save_best_only = True
 learning_schedule = False
 
 [notes]
-additional_notes = vae is sort-of working. Testing various config options now. 
+additional_notes = vae is working. Testing longer runs with few latent dimensions
 mynotes = 
 
 [extra]
 description = func-timbre-vae-cedar
-start = Wed Jan 15 10:45:06 2020
-end = Wed Jan 15 13:10:00 2020
-time_elapsed = 8694.31551194191
-
+start = T
+end = 
+time_elapsed = 
