--- a/functional/timbre-vae/default-cedar2.ini
+++ b/functional/timbre-vae/default-cedar2.ini
@@ -8,12 +8,13 @@ n_iter = 64
 [dataset]
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
-workspace = /home/ktatar/scratch/datasets/Electroacoustic-Roads/func-timbre-vae-cedar/run-002
-run_number = 2
+workspace = 
+run_number = 10
+total_frames = 895918
 
 [VAE]
-latent_dim = 128
-n_units = 2000
+latent_dim = 4
+n_units = 2048
 kl_beta = 0.0005
 batch_norm = True
 output_activation = relu
@@ -28,15 +29,14 @@ continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
-learning_schedule = True
+learning_schedule = False
 
 [notes]
-additional_notes = vae is sort-of working. Testing learning schedule
+additional_notes = vae is working. Testing longer runs with few latent dimensions
 mynotes = 
 
 [extra]
 description = func-timbre-vae-cedar
-start = Wed Jan 15 10:45:06 2020
-end = Wed Jan 15 13:10:00 2020
-time_elapsed = 8694.31551194191
-
+start = T
+end = 
+time_elapsed = 
