--- a/functional/timbre-vae/default-cedar3.ini
+++ b/functional/timbre-vae/default-cedar3.ini
@@ -8,18 +8,19 @@ n_iter = 64
 [dataset]
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
-workspace = /home/ktatar/scratch/datasets/Electroacoustic-Roads/func-timbre-vae-cedar/run-002
-run_number = 2
+workspace = 
+run_number = 10
+total_frames = 895918
 
 [VAE]
-latent_dim = 32
-n_units = 2000
+latent_dim = 2
+n_units = 2048
 kl_beta = 0.0005
 batch_norm = True
-output_activation = sigmoid
+output_activation = relu
 
 [training]
-epochs = 200
+epochs = 2000
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -31,12 +32,11 @@ save_best_only = True
 learning_schedule = False
 
 [notes]
-additional_notes = vae is sort-of working. Testing output activation
+additional_notes = vae is working. Testing longer runs with few latent dimensions
 mynotes = 
 
 [extra]
 description = func-timbre-vae-cedar
-start = Wed Jan 15 10:45:06 2020
-end = Wed Jan 15 13:10:00 2020
-time_elapsed = 8694.31551194191
-
+start = T
+end = 
+time_elapsed = 
