--- a/functional/timbre-vae/default-cedar4.ini
+++ b/functional/timbre-vae/default-cedar4.ini
@@ -8,18 +8,19 @@ n_iter = 64
 [dataset]
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
-workspace = /home/ktatar/scratch/datasets/Electroacoustic-Roads/func-timbre-vae-cedar/run-002
-run_number = 2
+workspace = 
+run_number = 10
+total_frames = 895918
 
 [VAE]
 latent_dim = 8
-n_units = 2000
+n_units = 2048
 kl_beta = 0.0005
 batch_norm = True
-output_activation = relu
+output_activation = sigmoid
 
 [training]
-epochs = 200
+epochs = 2000
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -31,12 +32,11 @@ save_best_only = True
 learning_schedule = False
 
 [notes]
-additional_notes = vae is sort-of working. Testing different latent dims. 
+additional_notes = vae is working. Testing longer runs with few latent dimensions
 mynotes = 
 
 [extra]
 description = func-timbre-vae-cedar
-start = 
+start = T
 end = 
 time_elapsed = 
-
