--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -46,7 +46,7 @@ additional_notes = testing output function
 mynotes = testing-example-audio-writting
 
 [extra]
-
+normalize_examples = False
 description = func-timbre-vae-icst-desktop
 start = 
 end = 
