--- a/functional/timbre-vae2/default.ini
+++ b/functional/timbre-vae2/default.ini
@@ -42,7 +42,7 @@ additional_notes = testing latent dimension
 mynotes = testing-example-audio-writting
 
 [extra]
-
+normalize_examples = False
 description = func-timbre-vae2
 start = 
 end = 
