--- a/functional/timbre-cvae2/default-cedar.ini
+++ b/functional/timbre-cvae2/default-cedar.ini
@@ -40,7 +40,7 @@ additional_notes = testing latent dimension
 mynotes = testing-example-audio-writting
 
 [extra]
-
+normalize_examples = False
 description = func-timbre-vae2-cedar
 start = 
 end = 
