--- a/functional/timbre-vae/default-cedar.ini
+++ b/functional/timbre-vae/default-cedar.ini
@@ -36,6 +36,7 @@ additional_notes = vae is working. Testing longer runs with few latent dimension
 mynotes = 
 
 [extra]
+normalize_examples = False
 description = func-timbre-vae-cedar
 start = T
 end = 
