--- a/functional/timbre-vae/default-cedar3.ini
+++ b/functional/timbre-vae/default-cedar3.ini
@@ -36,7 +36,8 @@ additional_notes = vae is working. Testing longer runs with few latent dimension
 mynotes = 
 
 [extra]
+normalize_examples = False
 description = func-timbre-vae-cedar
-start = T
+start = 
 end = 
 time_elapsed = 
