--- a/functional/timbre-vae2/default-cedar3.ini
+++ b/functional/timbre-vae2/default-cedar3.ini
@@ -43,7 +43,7 @@ additional_notes = testing different stacked layers
 mynotes = testing-example-audio-writting
 
 [extra]
-
+normalize_examples = False
 description = func-timbre-vae2-cedar
 start = 
 end = 
