added example length option to decrease runtime

--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -47,6 +47,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 normalize_examples = False
+example_length = 10
 description = func-timbre-vae-icst-desktop
 start = 
 end = 
