--- a/functional/timbre-vae2/default.ini
+++ b/functional/timbre-vae2/default.ini
@@ -43,6 +43,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 normalize_examples = False
+example_length = 10
 description = func-timbre-vae2
 start = 
 end = 
