--- a/functional/timbre-cvae2/default.ini
+++ b/functional/timbre-cvae2/default.ini
@@ -40,6 +40,7 @@ additional_notes = testing latent dimension
 mynotes = testing-example-audio-writting
 
 [extra]
+example_length = 10
 normalize_examples = False
 description = func-timbre-vae2-cedar
 start = 
