--- a/functional/timbre-vae2/default-cedar4.ini
+++ b/functional/timbre-vae2/default-cedar4.ini
@@ -44,6 +44,7 @@ mynotes = testing-example-audio-writting
 
 [extra]
 normalize_examples = False
+example_length = 10
 description = func-timbre-vae2-cedar
 start = 
 end = 
