timbre-cvae working!

--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -9,21 +9,22 @@ n_iter = 64
 
 [dataset]
 
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
+datapath = D:\my_workspace\dataset\Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
 
-[VAE]
-latent_dim = 256
+[CVAE]
+latent_dim = 8
 n_units = 2048
-kl_beta = 2.0
+kernel_size = 3
+kl_beta = 0.0005
 batch_norm = False
 output_activation = relu
 
 [training]
-epochs = 200
-learning_rate = 1e-4
+epochs = 3
+learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
 buffer_size_dataset = True
@@ -31,7 +32,7 @@ continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
-learning_schedule = True
+learning_schedule = False
 
 
 [notes]
@@ -40,9 +41,9 @@ additional_notes = testing latent dimension
 mynotes = testing-example-audio-writting
 
 [extra]
-example_length = 10
 normalize_examples = False
-description = func-timbre-vae2-cedar
+example_length = 10
+description = func-timbre-cvae
 start = 
 end = 
 time_elapsed = 
