--- a/functional/timbre-vae/default-cedar2.ini
+++ b/functional/timbre-vae/default-cedar2.ini
@@ -6,14 +6,14 @@ num_octaves = 8
 n_iter = 64
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
+datapath = /home/ktatar/scratch/datasets/Electroacoustic-Bruno
 cqt_dataset = npy
 workspace = 
 run_number = 10
 total_frames = 895918
 
 [VAE]
-latent_dim = 4
+latent_dim = 16
 n_units = 2048
 kl_beta = 0.0005
 batch_norm = True
@@ -39,6 +39,6 @@ mynotes =
 normalize_examples = False
 example_length = 10
 description = func-timbre-vae-cedar
-start = 
+start = T
 end = 
 time_elapsed = 
