--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -33,7 +33,8 @@ max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
-
+early_patience_epoch = 50
+early_delta = 1e-6
 
 [notes]
 additional_notes = testing latent dimension
@@ -43,6 +44,8 @@ mynotes = testing-example-audio-writting
 [extra]
 normalize_examples = False
 example_length = 10
+plot_model = True
+
 description = func-timbre-cvae
 start = 
 end = 
