--- a/functional/timbre-vae/default-cedar4.ini
+++ b/functional/timbre-vae/default-cedar4.ini
@@ -30,6 +30,8 @@ max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
+early_patience_epoch = 50
+early_delta = 1e-6
 
 [notes]
 additional_notes = vae is working. Testing longer runs with few latent dimensions
@@ -38,6 +40,8 @@ mynotes =
 [extra]
 normalize_examples = False
 example_length = 10
+plot_model = False
+
 description = func-timbre-vae-cedar
 start = 
 end = 
