--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -36,6 +36,8 @@ max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
+early_patience_epoch = 50
+early_delta = 1e-6
 
 [notes]
 
@@ -46,6 +48,8 @@ mynotes =
 
 normalize_examples = False
 example_length = 10
+plot_model = True
+
 description = func-timbre-vae
 start = T
 end = 
