--- a/functional/timbre-vae2/default-cedar2.ini
+++ b/functional/timbre-vae2/default-cedar2.ini
@@ -35,7 +35,8 @@ max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
-
+early_patience_epoch = 50
+early_delta = 1e-7
 
 [notes]
 additional_notes = testing different stacked layers
@@ -45,6 +46,8 @@ mynotes = testing-example-audio-writting
 [extra]
 normalize_examples = False
 example_length = 10
+plot_model = False
+
 description = func-timbre-vae2-cedar
 start = 
 end = 
