--- a/functional/timbre-vae2/default-cedar.ini
+++ b/functional/timbre-vae2/default-cedar.ini
@@ -18,7 +18,7 @@ run_number = 0
 latent_dim = 8
 n_units = 2048
 n_units_divider = 2
-num_layers = 2
+num_layers = 3
 kl_beta = 0.0005
 batch_norm = False
 output_activation = relu
@@ -26,7 +26,7 @@ output_activation = relu
 
 [training]
 epochs = 3000
-learning_rate = 0.0001
+learning_rate = 0.00001
 batch_size = 64
 buffer_size = 60000
 buffer_size_dataset = True
@@ -36,12 +36,12 @@ checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
 early_patience_epoch = 50
-early_delta = 1e-7
+early_delta = 1e-9
 
 [notes]
-additional_notes = testing different stacked layers
+additional_notes = testing longer runs
 
-mynotes = testing-example-audio-writting
+mynotes = 
 
 [extra]
 normalize_examples = False
