--- a/functional/timbre-vae2/default-cedar2.ini
+++ b/functional/timbre-vae2/default-cedar2.ini
@@ -15,17 +15,16 @@ workspace =
 run_number = 0
 
 [VAE]
-latent_dim = 8
+latent_dim = 16
 n_units = 2048
 n_units_divider = 2
 num_layers = 3
-kl_beta = 0.0005
-batch_norm = True
+kl_beta = 0.00005
+batch_norm = False
 output_activation = relu
 
-
 [training]
-epochs = 3000
+epochs = 5000
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -35,17 +34,17 @@ max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
-early_patience_epoch = 50
+early_patience_epoch = 100
 early_delta = 1e-9
 
 [notes]
-additional_notes = testing batch normalization
+additional_notes = testing longer runs
 
 mynotes = 
 
 [extra]
 normalize_examples = False
-example_length = 10
+example_length = 30
 plot_model = False
 
 description = func-timbre-vae2-cedar
