preparation for cloud runs

--- a/functional/timbre-vae2/default-cedar.ini
+++ b/functional/timbre-vae2/default-cedar.ini
@@ -1,18 +1,16 @@
 [audio]
-sample_rate = 44100 
+sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-
-#Fast Griffin-Lim - number of iterations
 n_iter = 64
 
 [dataset]
-
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
+total_frames = 895918
 
 [VAE]
 latent_dim = 8
@@ -20,11 +18,11 @@ n_units = 2048
 n_units_divider = 2
 num_layers = 3
 kl_beta = 0.00005
-batch_norm = False
+batch_norm = True
 output_activation = relu
 
 [training]
-epochs = 5000
+epochs = 3000
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -38,16 +36,15 @@ early_patience_epoch = 100
 early_delta = 1e-9
 
 [notes]
-additional_notes = testing longer runs
-
+additional_notes = testing batch normalization
 mynotes = 
 
 [extra]
 normalize_examples = False
 example_length = 30
 plot_model = False
-
 description = func-timbre-vae2-cedar
-start = 
+start =
 end = 
 time_elapsed = 
+
