--- a/functional/timbre-vae2/default-cedar4.ini
+++ b/functional/timbre-vae2/default-cedar4.ini
@@ -1,32 +1,29 @@
 [audio]
-sample_rate = 44100 
+sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-
-#Fast Griffin-Lim - number of iterations
 n_iter = 64
 
 [dataset]
-
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
+total_frames = 895918
 
 [VAE]
 latent_dim = 8
 n_units = 2048
 n_units_divider = 2
 num_layers = 3
-kl_beta = 0.00005
-batch_norm = False
+kl_beta = 0.0005
+batch_norm = True
 output_activation = relu
-
 
 [training]
 epochs = 3000
-learning_rate = 0.00001
+learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
 buffer_size_dataset = True
@@ -35,20 +32,19 @@ max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
-early_patience_epoch = 50
+early_patience_epoch = 100
 early_delta = 1e-9
 
 [notes]
-additional_notes = testing longer runs with lower kl_beta and lower learning rate
-
+additional_notes = testing batch normalization with higher latent dims and lower kl
 mynotes = 
 
 [extra]
 normalize_examples = False
-example_length = 10
+example_length = 30
 plot_model = False
-
 description = func-timbre-vae2-cedar
-start = 
+start =
 end = 
 time_elapsed = 
+
