--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -16,25 +16,33 @@ run_number = 0
 
 [CVAE]
 latent_dim = 8
-n_units = 2048
+
+num_dense_layers = 3
+dense_units = 2048
+dense_unit_divider = 2
+
+num_conv_layers = 0
+num_inital_filters = 32
 kernel_size = 3
-kl_beta = 0.0005
+
+kl_beta = 5e-5
 batch_norm = False
 output_activation = relu
 
 [training]
-epochs = 3
+epochs = 50
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
 buffer_size_dataset = True
 continue_training = False
+
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
-early_patience_epoch = 50
-early_delta = 1e-6
+early_patience_epoch = 100
+early_delta = 1e-9
 
 [notes]
 additional_notes = testing latent dimension
