added multi-gpu training for timbre cvae

--- a/functional/timbre-cvae/default-il.ini
+++ b/functional/timbre-cvae/default-il.ini
@@ -9,7 +9,7 @@ n_iter = 64
 
 [dataset]
 
-datapath = D:\my_workspace\dataset\Electroacoustic-Roads
+datapath = C:\Users\il\Desktop\ImmersiveLab\machine-learning\datasets\Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
@@ -30,7 +30,7 @@ batch_norm = False
 output_activation = relu
 
 [training]
-epochs = 500
+epochs = 50
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -54,7 +54,7 @@ normalize_examples = False
 example_length = 10
 plot_model = False
 
-description = func-timbre-cvae
+description = func-timbre-cvae-il
 start = 
 end = 
 time_elapsed = 
