working on timbre cvae mixed with dense layers

--- a/functional/timbre-cvae/default-il.ini
+++ b/functional/timbre-cvae/default-il.ini
@@ -21,7 +21,7 @@ num_dense_layers = 3
 dense_units = 2048
 dense_unit_divider = 2
 
-num_conv_layers = 0
+num_conv_layers = 1
 num_inital_filters = 32
 kernel_size = 3
 
@@ -30,9 +30,9 @@ batch_norm = False
 output_activation = relu
 
 [training]
-epochs = 50
+epochs = 500
 learning_rate = 0.0001
-batch_size = 64
+batch_size = 256
 buffer_size = 60000
 buffer_size_dataset = True
 continue_training = False
@@ -45,14 +45,14 @@ early_patience_epoch = 100
 early_delta = 1e-9
 
 [notes]
-additional_notes = testing latent dimension
+additional_notes = one more conv. layer
 
 mynotes = testing-example-audio-writting
 
 [extra]
 normalize_examples = False
-example_length = 10
-plot_model = False
+example_length = 15
+plot_model = True
 
 description = func-timbre-cvae-il
 start = 
