added generate_interpolations script

--- a/functional/timbre-vae2/default.ini
+++ b/functional/timbre-vae2/default.ini
@@ -46,6 +46,9 @@ mynotes = testing-example-audio-writting
 normalize_examples = False
 example_length = 10
 plot_model = True
+interpolations_audio_1 = 05 Sculptor.wav
+interpolations_audio_2 = 05 Sculptor.wav
+
 
 description = func-timbre-vae2
 start = 
