--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -53,7 +53,11 @@ mynotes = testing-example-audio-writting
 normalize_examples = False
 example_length = 10
 plot_model = False
-
+interpolations_audio_1 = 05 Sculptor.wav
+audio_1_offset = 75
+interpolations_audio_2 = 05 Sculptor.wav
+audio_2_offset = 118
+num_random_interpolations = 4
 description = func-timbre-cvae
 start = 
 end = 
