--- a/functional/timbre-cvae/default-cedar3.ini
+++ b/functional/timbre-cvae/default-cedar3.ini
@@ -52,7 +52,7 @@ mynotes = testing-example-audio-writting
 [extra]
 normalize_examples = False
 example_length = 15
-plot_model = True
+plot_model = False
 interpolations_audio_1 = 05 Sculptor.wav
 audio_1_offset = 75
 interpolations_audio_2 = 05 Sculptor.wav
