--- a/functional/cqtgan/default.ini
+++ b/functional/cqtgan/default.ini
@@ -15,42 +15,33 @@ workspace =
 run_number = 0
 
 [VAE]
-latent_dim = 8
-n_units = 2048
-n_units_divider = 2
-num_layers = 2[]
-kl_beta = 0.0005
-batch_norm = False
+latent_dim = 64
+n_units = 2000
+kl_beta = 2.0
+batch_norm = True
 output_activation = relu
 
+[CGAN]
+latent_dim = 64
+
 [training]
-epochs = 200
-learning_rate = 0.0001
+epochs = 100
+learning_rate = 1e-5
 batch_size = 64
 buffer_size = 60000
 buffer_size_dataset = True
 continue_training = False
 max_ckpts_to_keep = 2
 checkpoint_epochs = 15
-save_best_only = True
-learning_schedule = False
-early_patience_epoch = 50
-early_delta = 1e-6
 
 [notes]
-additional_notes = testing latent dimension
+additional_notes = test- tanh as the output activation function. No batch normalization.
 
 mynotes = testing-example-audio-writting
 
 [extra]
-normalize_examples = False
-example_length = 10
-plot_model = True
-interpolations_audio_1 = 05 Sculptor.wav
-interpolations_audio_2 = 05 Sculptor.wav
 
-
-description = func-timbre-vae2
+description = cgan-cqt
 start = 
 end = 
 time_elapsed = 
