working on checkerboard artifacts

--- a/functional/timbre-cvae/default-cedar.ini
+++ b/functional/timbre-cvae/default-cedar.ini
@@ -9,13 +9,13 @@ n_iter = 64
 
 [dataset]
 
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
+datapath = /home/ktatar/scratch/datasets/ambient-lawrence-cruel
 cqt_dataset = npy
 workspace = 
 run_number = 0
 
 [CVAE]
-latent_dim = 8
+latent_dim = 16
 
 num_dense_layers = 3
 dense_units = 2048
@@ -23,10 +23,11 @@ dense_unit_divider = 2
 
 num_conv_layers = 0
 num_inital_filters = 32
-kernel_size = 3
+kernel_size = 4
 
 kl_beta = 5e-5
 batch_norm = False
+mid_activations = relu
 output_activation = relu
 
 [training]
