--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -9,13 +9,13 @@ n_iter = 64
 
 [dataset]
 
-datapath = D:\my_workspace\dataset\Electroacoustic-Roads
+datapath = D:\my_workspace\dataset\ambient-lawrence-cruel
 cqt_dataset = npy
 workspace = 
 run_number = 0
 
 [CVAE]
-latent_dim = 8
+latent_dim = 16
 
 num_dense_layers = 3
 dense_units = 2048
@@ -23,11 +23,11 @@ dense_unit_divider = 2
 
 num_conv_layers = 0
 num_inital_filters = 32
-kernel_size = 3
+kernel_size = 4
 
 kl_beta = 5e-5
 batch_norm = False
-mid_activations = leaky_relu
+mid_activations = relu
 output_activation = relu
 
 [training]
