working on checkerboard artifacts

--- a/functional/timbre-cvae/default-cedar.ini
+++ b/functional/timbre-cvae/default-cedar.ini
@@ -46,9 +46,9 @@ early_patience_epoch = 100
 early_delta = 1e-9
 
 [notes]
-additional_notes = testing a working model with longer run now. 
+additional_notes = working on the checkerboard artifacts. 
 
-mynotes = testing-example-audio-writting
+mynotes = testing kernel size 4
 
 [extra]
 normalize_examples = False
