--- a/functional/timbre-cvae/default-cedar.ini
+++ b/functional/timbre-cvae/default-cedar.ini
@@ -44,6 +44,7 @@ save_best_only = True
 learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
+verbose = 2
 
 [notes]
 additional_notes = working on the checkerboard artifacts. 
