preparing cloud runs

--- a/functional/timbre-cvae/default-cedar.ini
+++ b/functional/timbre-cvae/default-cedar.ini
@@ -60,7 +60,7 @@ audio_1_offset = 75
 interpolations_audio_2 = 05 Sculptor.wav
 audio_2_offset = 118
 num_random_interpolations = 4
-description = func-timbre-cvae-il
+description = func-timbre-cvae-cedar
 start = 
 end = 
 time_elapsed = 
