upsampling ready, cloud runs

--- a/functional/timbre-cvae/default-cedar2.ini
+++ b/functional/timbre-cvae/default-cedar2.ini
@@ -9,7 +9,7 @@ n_iter = 64
 
 [dataset]
 
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
+datapath = /home/ktatar/scratch/datasets/ambient-lawrence-cruel
 cqt_dataset = npy
 workspace = 
 run_number = 0
@@ -27,10 +27,11 @@ kernel_size = 3
 
 kl_beta = 5e-5
 batch_norm = False
+mid_activations = relu
 output_activation = relu
 
 [training]
-epochs = 5000
+epochs = 2000
 learning_rate = 0.0001
 batch_size = 256
 buffer_size = 60000
@@ -43,11 +44,12 @@ save_best_only = True
 learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
+verbose = 1
 
 [notes]
-additional_notes = testing a working model with longer run, higher latent dims. 
+additional_notes = working on the checkerboard artifacts. 
 
-mynotes = testing-example-audio-writting
+mynotes = testing kernel size 4
 
 [extra]
 normalize_examples = False
@@ -58,7 +60,7 @@ audio_1_offset = 75
 interpolations_audio_2 = 05 Sculptor.wav
 audio_2_offset = 118
 num_random_interpolations = 4
-description = func-timbre-cvae-il
+description = func-timbre-cvae-upsampled-cedar
 start = 
 end = 
 time_elapsed = 
