--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -29,6 +29,7 @@ kl_beta = 5e-5
 batch_norm = False
 mid_activations = relu
 output_activation = relu
+upsampling = nearest
 
 [training]
 epochs = 500
