--- a/functional/timbre-cvae/default-cedar2.ini
+++ b/functional/timbre-cvae/default-cedar2.ini
@@ -29,6 +29,7 @@ kl_beta = 5e-5
 batch_norm = False
 mid_activations = relu
 output_activation = relu
+upsampling = nearest
 
 [training]
 epochs = 2000
@@ -49,7 +50,7 @@ verbose = 1
 [notes]
 additional_notes = working on the checkerboard artifacts. 
 
-mynotes = testing kernel size 4
+mynotes = testing upsampling nearest 
 
 [extra]
 normalize_examples = False
