added leakyrelu script

--- a/functional/timbre-cvae/default-cedar4.ini
+++ b/functional/timbre-cvae/default-cedar4.ini
@@ -27,9 +27,9 @@ kernel_size = 3
 
 kl_beta = 5e-5
 batch_norm = False
-mid_activations = relu
+mid_activations = leaky_relu
 output_activation = relu
-upsampling = bilinear
+upsampling = nearest
 
 [training]
 epochs = 2000
@@ -48,9 +48,9 @@ early_delta = 1e-9
 verbose = 1
 
 [notes]
-additional_notes = working on the checkerboard artifacts. 
+additional_notes = working on the noise issue
 
-mynotes = testing upsampling bilinear 
+mynotes = testing leakyrelu
 
 [extra]
 normalize_examples = False
@@ -61,7 +61,7 @@ audio_1_offset = 75
 interpolations_audio_2 = 05 Sculptor.wav
 audio_2_offset = 118
 num_random_interpolations = 4
-description = func-timbre-cvae-upsampled-cedar
+description = func-timbre-cvae-leaky-cedar
 start = 
 end = 
 time_elapsed = 
