--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -23,11 +23,11 @@ dense_unit_divider = 2
 
 num_conv_layers = 0
 num_inital_filters = 32
-kernel_size = 4
+kernel_size = 3
 
 kl_beta = 5e-5
 batch_norm = False
-mid_activations = relu
+mid_activations = leaky_relu
 output_activation = relu
 upsampling = nearest
 
