added adam optimizer beta options

--- a/functional/timbre-cvae/default-cedar6.ini
+++ b/functional/timbre-cvae/default-cedar6.ini
@@ -9,7 +9,7 @@ n_iter = 64
 
 [dataset]
 
-datapath = /home/ktatar/scratch/datasets/ambient-lawrence-cruel
+datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
 cqt_dataset = npy
 workspace = 
 run_number = 0
@@ -27,7 +27,7 @@ kernel_size = 3
 
 kl_beta = 5e-5
 batch_norm = False
-mid_activations = leaky_relu
+mid_activations = relu
 output_activation = relu
 upsampling = nearest
 
@@ -46,13 +46,13 @@ learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
 verbose = 1
-adam_beta_1 = 0.9
-adam_beta_2 = 0.999
+adam_beta_1 = 0.5
+adam_beta_2 = 0.9
 
 [notes]
 additional_notes = working on the noise issue
 
-mynotes = testing leakyrelu
+mynotes = testing adam optimizer beta values from MelGan paper
 
 [extra]
 normalize_examples = False
@@ -63,7 +63,7 @@ audio_1_offset = 75
 interpolations_audio_2 = 05 Sculptor.wav
 audio_2_offset = 118
 num_random_interpolations = 4
-description = func-timbre-cvae-leaky-cedar
+description = func-timbre-cvae-cedar
 start = 
 end = 
 time_elapsed = 
