--- a/functional/timbre-cvae/default-cedar2.ini
+++ b/functional/timbre-cvae/default-cedar2.ini
@@ -46,6 +46,8 @@ learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
 verbose = 1
+adam_beta_1 = 0.9
+adam_beta_2 = 0.999
 
 [notes]
 additional_notes = working on the checkerboard artifacts. 
