--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -27,7 +27,7 @@ kernel_size = 3
 
 kl_beta = 5e-5
 batch_norm = False
-mid_activations = leaky_relu
+mid_activations = relu
 output_activation = relu
 upsampling = nearest
 
@@ -45,6 +45,9 @@ save_best_only = True
 learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
+verbose = 2
+adam_beta_1 = 0.9
+adam_beta_2 = 0.999
 
 [notes]
 additional_notes = testing latent dimension
