added bit_depth option

--- a/functional/timbre-cvae/default-cedar.ini
+++ b/functional/timbre-cvae/default-cedar.ini
@@ -6,11 +6,12 @@ num_octaves = 8
 
 #Fast Griffin-Lim - number of iterations
 n_iter = 64
+cqt_bit_depth = float64
 
 [dataset]
 
-datapath = /home/ktatar/scratch/datasets/ambient-lawrence-cruel
-cqt_dataset = npy
+datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads-with-silence
+cqt_dataset = npy_64bit
 workspace = 
 run_number = 0
 
@@ -49,9 +50,9 @@ adam_beta_1 = 0.9
 adam_beta_2 = 0.999
 
 [notes]
-additional_notes = working on the checkerboard artifacts. 
+additional_notes = working on the noise generation
 
-mynotes = testing kernel size 4
+mynotes = testing higher bitrate with higher dimensions
 
 [extra]
 normalize_examples = False
