--- a/functional/timbre-cvae/default.ini
+++ b/functional/timbre-cvae/default.ini
@@ -6,11 +6,12 @@ num_octaves = 8
 
 #Fast Griffin-Lim - number of iterations
 n_iter = 64
+cqt_bit_depth = float64
 
 [dataset]
 
-datapath = D:\my_workspace\dataset\ambient-lawrence-cruel
-cqt_dataset = npy
+datapath = D:\my_workspace\dataset\Electroacoustic-Roads-with-silence
+cqt_dataset = npy_64bit
 workspace = 
 run_number = 0
 
@@ -45,7 +46,7 @@ save_best_only = True
 learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
-verbose = 2
+verbose = 1
 adam_beta_1 = 0.9
 adam_beta_2 = 0.999
 
