--- a/functional/timbre-cvae/default-cedar2.ini
+++ b/functional/timbre-cvae/default-cedar2.ini
@@ -6,16 +6,17 @@ num_octaves = 8
 
 #Fast Griffin-Lim - number of iterations
 n_iter = 64
+cqt_bit_depth = float64
 
 [dataset]
 
-datapath = /home/ktatar/scratch/datasets/ambient-lawrence-cruel
-cqt_dataset = npy
+datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads-with-silence
+cqt_dataset = npy_64bit
 workspace = 
 run_number = 0
 
 [CVAE]
-latent_dim = 16
+latent_dim = 32
 
 num_dense_layers = 3
 dense_units = 2048
@@ -23,13 +24,12 @@ dense_unit_divider = 2
 
 num_conv_layers = 0
 num_inital_filters = 32
-kernel_size = 3
+kernel_size = 4
 
 kl_beta = 5e-5
 batch_norm = False
 mid_activations = relu
 output_activation = relu
-upsampling = nearest
 
 [training]
 epochs = 2000
@@ -50,9 +50,9 @@ adam_beta_1 = 0.9
 adam_beta_2 = 0.999
 
 [notes]
-additional_notes = working on the checkerboard artifacts. 
+additional_notes = working on the noise generation
 
-mynotes = testing upsampling nearest 
+mynotes = testing higher bitrate with higher dimensions
 
 [extra]
 normalize_examples = False
@@ -63,7 +63,7 @@ audio_1_offset = 75
 interpolations_audio_2 = 05 Sculptor.wav
 audio_2_offset = 118
 num_random_interpolations = 4
-description = func-timbre-cvae-upsampled-cedar
+description = func-timbre-cvae-cedar
 start = 
 end = 
 time_elapsed = 
