Going nuts to solve the noise issue. Prepared runs for the cloud.

--- a/functional/timbre-cvae/default-cedar6.ini
+++ b/functional/timbre-cvae/default-cedar6.ini
@@ -6,17 +6,16 @@ num_octaves = 8
 
 #Fast Griffin-Lim - number of iterations
 n_iter = 64
-cqt_bit_depth = float64
 
 [dataset]
 
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads-with-silence
-cqt_dataset = npy_64bit
+cqt_dataset = npy
 workspace = 
 run_number = 0
 
 [CVAE]
-latent_dim = 64
+latent_dim = 16
 
 num_dense_layers = 3
 dense_units = 2048
@@ -30,6 +29,7 @@ kl_beta = 5e-5
 batch_norm = False
 mid_activations = relu
 output_activation = relu
+upsampling = nearest
 
 [training]
 epochs = 2000
@@ -52,7 +52,7 @@ adam_beta_2 = 0.999
 [notes]
 additional_notes = working on the noise generation
 
-mynotes = testing higher bitrate with higher dimensions
+mynotes = testing upsampling nearest
 
 [extra]
 normalize_examples = False
