--- a/functional/timbre-cvae/default-cedar4.ini
+++ b/functional/timbre-cvae/default-cedar4.ini
@@ -6,12 +6,11 @@ num_octaves = 8
 
 #Fast Griffin-Lim - number of iterations
 n_iter = 64
-cqt_bit_depth = float64
 
 [dataset]
 
 datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads-with-silence
-cqt_dataset = npy_64bit
+cqt_dataset = npy
 workspace = 
 run_number = 0
 
@@ -52,7 +51,7 @@ adam_beta_2 = 0.999
 [notes]
 additional_notes = working on the noise generation
 
-mynotes = testing higher bitrate with higher dimensions
+mynotes = testing higher dimensions with silence
 
 [extra]
 normalize_examples = False
