--- a/functional/timbre-cvae/default-cedar7.ini
+++ b/functional/timbre-cvae/default-cedar7.ini
@@ -15,7 +15,7 @@ workspace =
 run_number = 0
 
 [CVAE]
-latent_dim = 32
+latent_dim = 16
 
 num_dense_layers = 3
 dense_units = 2048
@@ -29,6 +29,7 @@ kl_beta = 5e-5
 batch_norm = False
 mid_activations = relu
 output_activation = relu
+upsampling = bilinear
 
 [training]
 epochs = 2000
@@ -45,13 +46,13 @@ learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
 verbose = 1
-adam_beta_1 = 0.5
-adam_beta_2 = 0.9
+adam_beta_1 = 0.9
+adam_beta_2 = 0.999
 
 [notes]
-additional_notes = working on the noise generation, different adam beta values, copied from melgan paper
+additional_notes = working on the noise generation
 
-mynotes = testing higher dimensions with silence
+mynotes = testing upsampling bilinear
 
 [extra]
 normalize_examples = False
