--- a/functional/timbre-cvae/default-cedar2.ini
+++ b/functional/timbre-cvae/default-cedar2.ini
@@ -5,7 +5,7 @@ bins_per_octave = 48
 num_octaves = 8
 
 #Fast Griffin-Lim - number of iterations
-n_iter = 64
+n_iter = 1
 
 [dataset]
 
@@ -15,7 +15,7 @@ workspace =
 run_number = 0
 
 [CVAE]
-latent_dim = 32
+latent_dim = 256
 
 num_dense_layers = 3
 dense_units = 2048
@@ -23,9 +23,9 @@ dense_unit_divider = 2
 
 num_conv_layers = 0
 num_inital_filters = 32
-kernel_size = 3
+kernel_size = 4
 
-kl_beta = 5e-5
+kl_beta = 0.0005
 batch_norm = False
 mid_activations = relu
 output_activation = relu
@@ -51,7 +51,7 @@ adam_beta_2 = 0.999
 [notes]
 additional_notes = working on the noise generation
 
-mynotes = testing higher dimensions with silence
+mynotes = testing higher dimensions and higher kl beta, kernel size 4 with silence 
 
 [extra]
 normalize_examples = False
