--- a/functional/timbre-cvae/default-cedar3.ini
+++ b/functional/timbre-cvae/default-cedar3.ini
@@ -5,7 +5,7 @@ bins_per_octave = 48
 num_octaves = 8
 
 #Fast Griffin-Lim - number of iterations
-n_iter = 64
+n_iter = 1
 
 [dataset]
 
@@ -15,7 +15,7 @@ workspace =
 run_number = 0
 
 [CVAE]
-latent_dim = 64
+latent_dim = 256
 
 num_dense_layers = 3
 dense_units = 2048
@@ -23,9 +23,9 @@ dense_unit_divider = 2
 
 num_conv_layers = 0
 num_inital_filters = 32
-kernel_size = 3
+kernel_size = 4
 
-kl_beta = 5e-5
+kl_beta = 0.0005
 batch_norm = False
 mid_activations = relu
 output_activation = relu
@@ -45,13 +45,13 @@ learning_schedule = False
 early_patience_epoch = 100
 early_delta = 1e-9
 verbose = 1
-adam_beta_1 = 0.9
-adam_beta_2 = 0.999
+adam_beta_1 = 0.5
+adam_beta_2 = 0.9
 
 [notes]
 additional_notes = working on the noise generation
 
-mynotes = testing higher dimensions with silence
+mynotes = testing higher dimensions and higher kl beta, kernel size 4, melgan adam values with silence 
 
 [extra]
 normalize_examples = False
