--- a/functional/timbre-vae/default-cedar.ini
+++ b/functional/timbre-vae/default-cedar.ini
@@ -20,7 +20,7 @@ batch_norm = True
 output_activation = relu
 
 [training]
-epochs = 2000
+epochs = 5000
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -32,9 +32,11 @@ save_best_only = True
 learning_schedule = False
 early_patience_epoch = 50
 early_delta = 1e-8
+adam_beta_1 = 0.5
+adam_beta_2 = 0.9
 
 [notes]
-additional_notes = vae is working. Testing longer runs with few latent dimensions
+additional_notes = vae is working. Testing adam beta valuess
 mynotes = 
 
 [extra]
