--- a/functional/timbre-vae/default-cedar2.ini
+++ b/functional/timbre-vae/default-cedar2.ini
@@ -6,21 +6,21 @@ num_octaves = 8
 n_iter = 64
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Bruno
+datapath = /home/ktatar/scratch/datasets/ambient-lawrence-cruel
 cqt_dataset = npy
 workspace = 
 run_number = 10
 total_frames = 895918
 
 [VAE]
-latent_dim = 16
+latent_dim = 256
 n_units = 2048
 kl_beta = 0.0005
 batch_norm = True
 output_activation = relu
 
 [training]
-epochs = 2000
+epochs = 5000
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -31,10 +31,12 @@ checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
 early_patience_epoch = 50
-early_delta = 1e-6
+early_delta = 1e-8
+adam_beta_1 = 0.5
+adam_beta_2 = 0.9
 
 [notes]
-additional_notes = vae is working. Testing longer runs with few latent dimensions
+additional_notes = vae is working. Testing adam beta valuess with another album
 mynotes = 
 
 [extra]
