--- a/functional/timbre-vae/default-cedar2.ini
+++ b/functional/timbre-vae/default-cedar2.ini
@@ -6,10 +6,10 @@ num_octaves = 8
 n_iter = 64
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/ambient-lawrence-cruel
+datapath = /home/ktatar/scratch/datasets/HaydnKodalySchostakowitsch
 cqt_dataset = npy
 workspace = 
-run_number = 10
+run_number = 0
 total_frames = 895918
 
 [VAE]
@@ -36,7 +36,7 @@ adam_beta_1 = 0.5
 adam_beta_2 = 0.9
 
 [notes]
-additional_notes = vae is working. Testing adam beta valuess with another album
+additional_notes = vae is working. Testing a conventional music album
 mynotes = 
 
 [extra]
@@ -45,6 +45,6 @@ example_length = 10
 plot_model = False
 
 description = func-timbre-vae-cedar
-start = T
+start = 
 end = 
 time_elapsed = 
