--- a/functional/timbre-vae/default-cedar.ini
+++ b/functional/timbre-vae/default-cedar.ini
@@ -6,7 +6,7 @@ num_octaves = 8
 n_iter = 64
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads-with-silence
+datapath = /home/ktatar/scratch/datasets/erokia
 cqt_dataset = npy
 workspace = 
 run_number = 10
@@ -36,7 +36,7 @@ adam_beta_1 = 0.5
 adam_beta_2 = 0.9
 
 [notes]
-additional_notes = vae is working. Testing adam beta valuess
+additional_notes = vae is working. Testing a fx dataset
 mynotes = 
 
 [extra]
