working on the user interface for the interpolation

--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -1,32 +1,27 @@
-[audio]
 
-sample_rate = 44100 
+[audio]
+sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-
-#Fast Griffin-Lim - number of iterations
 n_iter = 64
 
 [dataset]
-
-datapath = D:\my_workspace\dataset\Electroacoustic-Roads
+datapath = D:\my_workspace\dataset\erokia
 cqt_dataset = npy
 workspace = 
 run_number = 10
-total_frames = 895918
+total_frames = 
 
 [VAE]
-
-latent_dim = 8
+latent_dim = 256
 n_units = 2048
 kl_beta = 0.0005
 batch_norm = True
 output_activation = relu
 
 [training]
-
-epochs = 2000
+epochs = 5000
 learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
@@ -37,20 +32,20 @@ checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
 early_patience_epoch = 50
-early_delta = 1e-6
+early_delta = 1e-9
+adam_beta_1 = 0.5
+adam_beta_2 = 0.9
 
 [notes]
-
-additional_notes = vae is working. Testing longer runs with few latent dimensions
+additional_notes = vae is working. Testing a fx dataset
 mynotes = 
 
 [extra]
-
 normalize_examples = False
 example_length = 10
-plot_model = True
+plot_model = False
 
-description = func-timbre-vae
+description = func-timbre-vae-cedar
 start = T
 end = 
 time_elapsed = 
