Interpolate_two app is working, first version.

--- a/functional/timbre-vae/default-cedar2.ini
+++ b/functional/timbre-vae/default-cedar2.ini
@@ -36,7 +36,7 @@ adam_beta_1 = 0.5
 adam_beta_2 = 0.9
 
 [notes]
-additional_notes = vae is working. Testing a conventional music album
+additional_notes = vae is working. running eroika dataset with different learning rates
 mynotes = 
 
 [extra]
