cloud runs for onur

--- a/functional/timbre-vae/default-cedar.ini
+++ b/functional/timbre-vae/default-cedar.ini
@@ -3,14 +3,14 @@ sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-n_iter = 64
+n_iter = 4
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/erokia
+datapath = /home/ktatar/scratch/datasets/onur_digital
 cqt_dataset = npy
 workspace = 
-run_number = 10
-total_frames = 895918
+run_number = 0
+total_frames = 
 
 [VAE]
 latent_dim = 256
@@ -21,7 +21,7 @@ output_activation = relu
 
 [training]
 epochs = 2000
-learning_rate = 0.00005
+learning_rate = 0.0001
 batch_size = 64
 buffer_size = 60000
 buffer_size_dataset = True
