--- a/functional/timbre-vae/default-cedar3.ini
+++ b/functional/timbre-vae/default-cedar3.ini
@@ -3,19 +3,19 @@ sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-n_iter = 64
+n_iter = 4
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/HaydnKodalySchostakowitsch
+datapath = /home/ktatar/scratch/datasets/onur_hymnen
 cqt_dataset = npy
 workspace = 
-run_number = 10
-total_frames = 895918
+run_number = 0
+total_frames = 
 
 [VAE]
 latent_dim = 256
 n_units = 2048
-kl_beta = 0.005
+kl_beta = 0.0005
 batch_norm = True
 output_activation = relu
 
@@ -31,12 +31,12 @@ checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
 early_patience_epoch = 50
-early_delta = 1e-8
+early_delta = 1e-9
 adam_beta_1 = 0.9
 adam_beta_2 = 0.999
 
 [notes]
-additional_notes = vae is working. running eroika dataset with different learning rates
+additional_notes = vae is working.
 mynotes = 
 
 [extra]
@@ -45,6 +45,6 @@ example_length = 10
 plot_model = False
 
 description = func-timbre-vae-cedar
-start = 
+start = T
 end = 
 time_elapsed = 
