--- a/functional/timbre-vae/default-cedar4.ini
+++ b/functional/timbre-vae/default-cedar4.ini
@@ -3,21 +3,21 @@ sample_rate = 44100
 hop_length = 128
 bins_per_octave = 48
 num_octaves = 8
-n_iter = 64
+n_iter = 4
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/Electroacoustic-Roads
+datapath = /home/ktatar/scratch/datasets/onur_hymnen
 cqt_dataset = npy
 workspace = 
-run_number = 10
-total_frames = 895918
+run_number = 0
+total_frames = 
 
 [VAE]
-latent_dim = 8
+latent_dim = 256
 n_units = 2048
-kl_beta = 0.0005
+kl_beta = 0.001
 batch_norm = True
-output_activation = sigmoid
+output_activation = relu
 
 [training]
 epochs = 2000
@@ -31,10 +31,12 @@ checkpoint_epochs = 15
 save_best_only = True
 learning_schedule = False
 early_patience_epoch = 50
-early_delta = 1e-6
+early_delta = 1e-9
+adam_beta_1 = 0.9
+adam_beta_2 = 0.999
 
 [notes]
-additional_notes = vae is working. Testing longer runs with few latent dimensions
+additional_notes = vae is working.
 mynotes = 
 
 [extra]
@@ -43,6 +45,6 @@ example_length = 10
 plot_model = False
 
 description = func-timbre-vae-cedar
-start = 
+start = T
 end = 
 time_elapsed = 
