working on tsne vis

--- a/utils/lspace_vis_tsne-pc.ini
+++ b/utils/lspace_vis_tsne-pc.ini
@@ -6,9 +6,9 @@ num_octaves = 8
 n_iter = 64
 
 [dataset]
-datapath = /home/ktatar/scratch/datasets/erokia
+datapath = D:/my_workspace/dataset/erokia
 cqt_dataset = npy
-workspace = /home/ktatar/scratch/datasets/erokia/func-timbre-vae-cedar/run-013
+workspace = D:/my_workspace/dataset/erokia/func-timbre-vae-cedar/run-013
 run_number = 10
 total_frames = 3084591
 
