updated write audio with soundfile

--- a/functional/timbre-vae/default.ini
+++ b/functional/timbre-vae/default.ini
@@ -7,7 +7,7 @@ num_octaves = 8
 n_iter = 1
 
 [dataset]
-datapath = D:\dataset\Electroacoustic-Roads-with-silence
+datapath = C:\Users\Kivanc\Documents\my_workspace\datasets\sydney-opera
 cqt_dataset = npy
 workspace = 
 run_number = 0
@@ -24,7 +24,7 @@ output_activation = relu
 epochs = 2000
 learning_rate = 0.0001
 batch_size = 64
-buffer_size = 60000
+buffer_size = 1024
 buffer_size_dataset = True
 continue_training = False
 max_ckpts_to_keep = 2
@@ -43,9 +43,9 @@ mynotes =
 [extra]
 normalize_examples = False
 example_length = 10
-plot_model = True
+plot_model = False
 
-description = func-timbre-vae
+description = alien-func-timbre-vae
 start = T
 end = 
 time_elapsed = 
